--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -9,6 +9,7 @@
 \usepackage{amsfonts}
 \usepackage{mathtools}
 \usepackage{booktabs}
+\usepackage{listings}
 \usepackage[justification=centering]{caption}
 
 \title{Software Optimizations for Reduced CPU Energy Consumption: A Feasibility Study}                            
@@ -52,7 +53,7 @@ The University of Warwick}\\
 \input{introduction}
 \input{background}
 \input{prior}
-\input{profiling}
+\input{modelling}
 \input{results}
 \input{conclusion}
 
