--- a/Paper/introduction.tex
+++ b/Paper/introduction.tex
@@ -5,4 +5,4 @@ Hardware manufacturers are already prioritising energy efficiency in their proce
 
 A body of research is accumulating as the search for techniques to identify and reason about software power optimizations continues. This paper is intended to provide a critical review of the field; identifying the opportunities present and highlighting the amount of benefit which can be realistically expected of them. We first review the prior art in this area and identify overall trends in the approaches taken. Secondly we undertake an empirical investigation, applying some of the proposed techniques in order to understand how they may benefit developers in practice. \golden
 
-The remainder of this paper is organized as follows: Section~\ref{sec:background} details the problem background and introduces some core concepts and metrics. Section~\ref{sec:prior} gives an overview of prior research carried out on this topic. Section~\ref{sec:profiling} then details our empirical investigations into power profiling and our appraisal of the techniques described in Section~\ref{sec:prior}. We provide the results of this investigation in Section~\ref{sec:results} before presenting our conclusions in Section~\ref{sec:conclusion}. \golden
+The remainder of this paper is organized as follows: Section~\ref{sec:background} details the problem background and introduces some core concepts and metrics. Section~\ref{sec:prior} gives an overview of prior research carried out on this topic. Section~\ref{sec:modelling} then details our empirical investigations into power profiling and our appraisal of the techniques described in Section~\ref{sec:prior}. We provide the results of this investigation in Section~\ref{sec:results} before presenting our conclusions in Section~\ref{sec:conclusion}. \golden
