--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -23,7 +23,7 @@ The University of Warwick}\\
 \hyphenation{scaling}
 
 \newcommand{\golden}{}
-\renewcommand{\golden}{{\color{green} \checkmark}}
+%\renewcommand{\golden}{{\color{green} \checkmark}}
 
 
 \newcommand{\findref}{}
