--- a/Paper/shadow.tex
+++ b/Paper/shadow.tex
@@ -1,4 +1,4 @@
-\section{Shadow}
+\section{Notes}
 
 \todo{\begin{enumerate}
 \item Merge this delta section - use for snippets
@@ -8,6 +8,15 @@
 
 \end{enumerate}
 }
+
+
+
+\todo{Say how the baseline does not include halts, but halted states are time dependent only }
+\begin{figure}
+\label{fig:tlpilp}
+\includegraphics[width=0.9\linewidth]{./Plots/tlp_vs_ilp/tlpilp-figure0.pdf}
+\caption{Power Overhead from TLP and ILP}
+\end{figure}
 
 \todo{State that we use linpack as an arbitrary code. The reader can substitute in their own}
 
