--- a/Paper/modelling.tex
+++ b/Paper/modelling.tex
@@ -1,25 +1,40 @@
 \section{Power Modelling}
 \label{sec:modelling}
 
-We consider two related issues in the practical component of our work. The first task is to identify the bounds of CPU power consumption when running arbitrary code. 
-This allows us to place an upper limit on how much it is possible to optimize any code by. These bounds also help us tackle a second issue - namely to provide a fairer appraisal of model accuracies than often found elsewhere in the literature.
+We consider two related issues in the practical component of our work. The first task is to establish bounds on how much CPU power draw can vary whilst running arbitrary code. This allows us to place an upper limit on how much is possible to optimize a given code by. These bounds also help us tackle a second issue - namely to provide an objective appraisal of the power models proposed elsewhere in the literature.
 
-The only relevant property an engineer can influence when optimizing software for reduced power consumption is the activity factor. As previously discussed, the activity factor of a processor has a linear relationship with dynamic power and secondary relationships with both static and dynamic power through the actions of DVFS. A developer wishing to save energy should therefore aim to modify their code to reduce its activity factor.
+The only relevant property an engineer can influence when optimizing software for reduced power consumption is the activity factor. As previously discussed, the activity factor of a processor has a linear relationship with dynamic power and secondary non-linear relationships through the actions of DVFS with both static and dynamic power. A developer wishing to save energy should therefore aim to modify their code to reduce its contribution to activity factor.
 
-Although we defined activity factor as a scalar between zero and one, we know that in practice its range will be much more limited. Although some processor elements are responsible for handing program logic, many more are dedicated to ongoing ancillary tasks like instruction decoding or propagating clock signals. Conversely, we know that modern processors are not able to keep all their functional units active simultaneously.  We define the range of values activity factors can reasonably take whilst running a code as $[\alpha  .. \beta]$ where $0 < \alpha < \beta < 1$.
+Although activity factor is defined as a scalar between zero and one, we know that in practice its range will be much more limited. Although some processor elements are responsible for handing program logic, many more are dedicated to ongoing ancillary tasks like instruction decoding or propagating clock signals. Conversely, we know that processors are not able to keep all their functional units active simultaneously.  We define the range of values activity factors can reasonably take whilst running a code as $[\alpha  .. \beta]$ where $0 < \alpha < \beta < 1$.
 
 \begin{figure}[ht]                                                               
 \centering                                                                      
 \lstset{basicstyle=\ttfamily\footnotesize\bfseries,                             
       frame=tb}                                                                 
 \lstinputlisting[]{Listings/nops.c}                             
-\caption{Baseline Benchmark}                            
+\caption{Baseline Power Benchmark}                            
 \label{fig:nopjmpres}                                                           
 \end{figure}  
 
-We rely on empirical measurement to discover the power draw associated with activity factors $\alpha$ and $\beta$. Our first benchmark, shown in \figurename~\ref{fig:nopjmpres}, is a simple busy waiting loop with no side-effects. By monitoring the power consumed whilst running this code we derive our lower bound. We repeat this process to produce a baseline for each combination of clock frequency and core count as shown in Table~\ref{tab:baseline}. It is safe to assume that any non-trivial code requires strictly more power than this benchmark which performs no work.
+We rely on empirical measurement to discover the power draws $P_{\alpha}$ and $P_{\beta}$ associated with activity factors $\alpha$ and $\beta$. Our first benchmark, shown in \figurename~\ref{fig:nopjmpres}, is a simple busy waiting loop with no side-effects. By monitoring the power consumed whilst running this code we derive our lower bound ${P_{\alpha}}$. It is safe to assume that any non-trivial code requires strictly more power than our benchmark which performs no work. We repeat this process to produce a baseline for each combination of clock frequency and core count as shown in Table~\ref{tab:baseline}.
 
-Having established our $\alpha$-baseline we now turn our attention to the $\beta$-limit. Although we could do a system-wide one we just measure the code to be optimized, this is a tight bound.
+Having established our $P_{\alpha}$ baseline we now turn our attention to the $P_{\beta}$ limit. There is no obvious way to construct an artificial benchmark which exercises a maximal set of logic elements. Fortunately, when optimizing a specific code there is no need to devise such a system-wide upper bound. We simply use the power draw of our  un-optimized code as our upper limit, because trivially a worthwhile code optimization cannot yield worse performance.
+
+We plot lines with gradients $P_{\alpha}$ and $P_{\beta}$ in \figurename~\ref{fig:pow} to establish a feasible performance envelope. This represents the set of all $(P_{opt}, t_{opt})$ pairs for which $P_{\alpha} < P_{opt} < P_{\beta}$, with no bounds placed on runtime, $t_{opt}$. It should be clear that any optimisation must exist somewhere within this envelope.
+
+To constrain our search further we must consider the metric we wish to reduce. We know that for two logically equivalent codes $a$ and $b$, the transformation $a \to b$ is a valid optimization with respect to a cost metric $M$ if and only if $M(a) > M(b)$. In other words, if we plot a linking all points $a$ in our envelope where $M(a) = M(unopt.)$ then any valid optimization can only exist below this line.
+
+Our final bound concerns what it means to optimize for energy efficiency. All else being equal, energy to solution will reduce if a code can be made to run faster. That said, it would be disingenuous to claim this inevitable side-effect of classical optimization is also a valid energy optimization. The simplest solution would be to state that true power optimizations do not reduce runtime. We feel this definition is overly restrictive, however, as it excludes hypothetical optimizations which deliver significant reductions in power draw with minuscule reductions in runtime.
+
+The definition we have settled on is that the transformation $a \to b$ is a valid power optimization with respect to a chosen metric if the reduction in power draw it delivers accounts for the greatest proportion of improvement in said metric. Formally, we say \todo{Tricky equation}. Above this bound the reduction in runtime contributes a larger improvement to the cost metric than any reduction in power, meaning code changes in this region should be considered as classical runtime optimizations. By extension, all valid power optimizations must lie below this bound.
+
+
+\begin{figure}
+\includegraphics[width=0.9\linewidth]{./Plots/edp_optimization_space/optspace-figure0.pdf}
+\caption{Power Optimization Window}\label{fig:pow}
+\end{figure}
+
+In \figurename~\ref{fig:pow} we plot the limits described above for a hypothetical code. 
 
 
 
@@ -29,13 +44,6 @@ We first construct a power model in the vein of those proposed in the literature
 
 
 \todo{Make sure table is in the right place}
-
-
-\begin{figure}
-\label{fig:pow}
-\includegraphics[width=0.9\linewidth]{./Plots/edp_optimization_space/optspace-figure0.pdf}
-\caption{Power Optimization Window}
-\end{figure}
 
 
 
@@ -56,15 +64,6 @@ The latter proves particularly onerous, as by definition the circuitry driven by
 \todo{Occam's razor}
 
 \fragment{Often power models are assessed by their performance relative to a measured baseline. Although this is important, this figure is somewhat meaningless without context. Our approach is one of quantifying 
-
-
-
-
-\begin{figure}
-\label{fig:tlpilp}
-\includegraphics[width=0.9\linewidth]{./Plots/tlp_vs_ilp/tlpilp-figure0.pdf}
-\caption{Power Overhead from TLP and ILP}
-\end{figure}
 
 
 \todo{Make this bit less attacky:}
@@ -134,17 +133,8 @@ presented previously with appropriate constants substituted \todo{sampled}. We p
 
 \todo{One limitation of this work stems from the nature of RAPL - it is an accumulative measurement of power taking into account all processes. On a loaded system it will measure all tasks }
 
-
-
-
-
-
-
-
-
-
 \begin{figure}
-\label{fig:feasible_envelope}
+\label{fig:dummy_model}
 \includegraphics[width=0.9\linewidth]{./Plots/dummy_model/dummymodel-figure0.pdf}
 \caption{Feasible Power Envelope}
 \end{figure}
