--- a/Paper/Plots/model_drawing/optspace.tex
+++ b/Paper/Plots/model_drawing/optspace.tex
@@ -11,6 +11,6 @@
 \tikzexternalize % activate!
 \begin{document}
 \begin{figure}[ht]
-\include{teepee_core}
+  \include{sample}
 \end{figure}
 \end{document}
