--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -11,6 +11,7 @@
 \usepackage{booktabs}
 \usepackage{listings}
 \usepackage[justification=centering]{caption}
+\usepackage{pgfplots}
 
 \title{Software Optimizations for Reduced CPU Energy Consumption: A Feasibility Study}                            
 \author{\IEEEauthorblockN{Stephen I. Roberts and Stephen Jarvis} \\
@@ -52,9 +53,10 @@ The University of Warwick}\\
 
 \input{introduction}
 \input{background}
-\input{prior}
-\input{modelling}
+
+\input{quantifying}
 \input{results}
+\input{prior}
 \input{conclusion}
 
 \input{shadow}
